@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX regex-base-0.71-0.72.patch 17967 SHA256 2d2c99e429c8b1a8875abed2178d54dfb99f4c2a27ee07888f72d17d04f955a2 SHA512 d1389cd4004f9e5922158bc5750be851b300c03a5b7723513b365b85b1771dcf82be5bcd7a5a93b83799164c076b58f26eb31b9eb3dc36e12e58569c4a9cffbc WHIRLPOOL b59e7ebb00e8aba1c6446bb10b635bb747e29c67d24601de229ae9c9c5bc6e8a10004d3f0d29affe89af0cfd879f1bb7aa1872616f39858422af44c26cd01f41
 DIST regex-base-0.71.tar.gz 6759 SHA256 af230c3088c6a963c4dc29a203c8804b707aa02c135113cce13d1fefdde02ff9 SHA512 027aea713d93aa783b9142760e15e77d3e9fd0ac9b9a8ca391435939b6995a8954085891c4b015e244f19a4885577a988b7cd0cd8d78fe55d183a78cd572928d WHIRLPOOL 65c17a77f198803907efe136352f83d3a716c8147ede0d0569f4fcce91813efd0637ff11cfa49b2add52ea0a2e59fcd48b32b9257cd10b71ca0e3d75be1650e2
 DIST regex-base-0.72.0.1.tar.gz 6916 SHA256 22a521476775ede118f121e8ad0074022431ece6fb0bbeb43c073e7cad36ee59 SHA512 5bb75d9e6c7f7c5507bcf903b242998482af7f30224190744ae40cb13eef71e6148aa4c3ecc67ec9452d4065597670f7fd670dc93f492f506c445f73db6d11f7 WHIRLPOOL 4af60db8864bc1c8b1445c50e4b3695e05cc06a3accc8adf428069f46ddde278fd864b327b1dbfbae8179fd57ec92e103734eb96e089cfde28c2c8cb8e07096c
@@ -9,6 +12,14 @@ EBUILD regex-base-0.72.0.1.ebuild 592 SHA256 2315ad3992d9e8789e4032bf3f70b640c38
 EBUILD regex-base-0.72.0.2.ebuild 622 SHA256 aa656dbd81183d25b6150bef379256a0cb3421adcb901c9f1a708f5c23651f5c SHA512 8d9d788cfd0f4b0aa3935b173990cb0dae3f59c0c3c092cb24e3abff69ce5fbb09020a6fb97f7471ed2716234d6aa594d02d3fea50ce7f8ca820278704dd0410 WHIRLPOOL 6bab97428355aa4a0e126e02ee87fed24420ee9572322603783d220e6e5576f8b70551ee645b538144c576adfc186031416ae45bf0dea76cf73457ccaf627ad2
 EBUILD regex-base-0.72.ebuild 807 SHA256 86778be16339ddbebc1ac8396ac6c1cbcea06edc12291b90b3a6b4ba1132bd48 SHA512 bc58371beab01346b522455c283b712177002cde5255ee5fdd6e75f59ed0b2e1113b566410b51fc62d1a7cf04681e7372dae0cb8361f4a63fcf87d5c94e238dd WHIRLPOOL 79ba2a957255389223b847c7d62eed83aeed17d8589778f53502839da50db21d04a8fa85f7b5f46d90b6a9f806a4dddf9c48ae32066b80f158469a5afe17894c
 EBUILD regex-base-0.93.1.ebuild 700 SHA256 e014e17d11b8f31f2a643bd5bb5cb9148f84a884c55ac511a3e73b0396d0302e SHA512 d884a5ef38399d35c0a3beb1a054729ba890f7eab0f316d4acaa6e34c63d9e3e7fb20aaaaa45bc9419b034130b43c3798ddf25f68fe600b685158cd52f106878 WHIRLPOOL b41481abf57f8f739d1f6384e7eda5130160eeff8d5840271e8573c45377bc6813fdc35bd19f3fa2e7b7e33c919f2a0518c873d463edf1d2497665b6fcef7e88
+EBUILD regex-base-0.93.2-r1.ebuild 888 SHA256 323f62a0c5737a84cdafd11b768801c82aa14c9cac20d5bd8661e71e82ab9c56 SHA512 d2351692bd0a1600700c376f3a56dd18f73314739b94cb81f2defac00a367e4758609d2a40958d48e1d15e3004096777152dcb195cb62aff08ef4237b172244b WHIRLPOOL 8ec9fd54a712a4e9eaa635aaf179b5f0e3cc854d3c34997a14a4244d0e178a529ba1d226a5105f1b40fcc65b43594bd2e1a1f348e0dc789e2abb606ad5e6b7a5
 EBUILD regex-base-0.93.2.ebuild 754 SHA256 6866af2cc4d37949c7d1b9e3859f9f6ef401112434e917d5dea74f421ecbdf4e SHA512 d8e984f1320e74535b46c8ee6d7aade399f92a3d8282a785cbf0ffdfdc9a83fa2c4fd632dd687ad710bd7e80cf9f01ecd0cf245711a4586f524dda824d072a68 WHIRLPOOL 77bf68731e9cc161001830a53a2c02ef0c14a3c17e62de7644a595e6c9ebbe57e5342f65eaf60b322a91443cfa6175046029233e7df59c16d775b8aaa6af02ea
-MISC ChangeLog 5224 SHA256 fe7b109d20afa4723224163251bce097e3e026570dab77327e746480b40b3f11 SHA512 62786512c928f6671b42c6dceac7f800fa006309bf607648e967f6df4c19d505b12d601341de8db94af912a32ee007fbe329aa9f01e4533f2259ef094fdbad9e WHIRLPOOL 0c558c37453d65d1d024fd642b6254ea3723517bf56e2d007669980043fd8af606ad048a598c6b93e6716edcf4078c3b50c009b91b0b8c52cf43006d8f681b25
+MISC ChangeLog 5392 SHA256 baa970afca1754a2cf9963ad93ba1059a7788481172d6d79c2c012f27ee8c9f5 SHA512 264e617ddd2a89da0d2c51f2bd59d202ce80cfdb66d9b6abd92f00e1683a03bcb9ef76f7462f6319808bd9fa73ffa3ad2b93164e212761ffdd1d2c0d11cdcbeb WHIRLPOOL 634e0f8abfb500d360ac51ab55266d33abc1e5aaeae6c0be9c97df65dd7eb5d1e0b87978fe841bdbe889e60db783e7e702bdcb4225bf98c450a34fa49cbe749f
 MISC metadata.xml 223 SHA256 1d00c8be162a6cb87b3de440b3e63e10b39c12d56e8fbfe592e75aed872b2508 SHA512 24765bbf1cb187cd262aa7fb3824c1cec65e2bf3f2198099de688916d96401a26458265b15408f22b1fbd6d6a2842df814a57ceda80dfa00d130b24423b7544f WHIRLPOOL 8fd6700f6198db6540eb51edf11372faeb6eb8a542a692e515badf236f62444f2c180f7d08e0f98e9fdfa23de14631b31af50543469aaa27084d6b637e2644c7
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iF4EAREIAAYFAlFashkACgkQoBEVQmGOlx++DwD+IfOAKtdfFaEzWLnCXqyvJG8c
+lpzw8oDp3oJTu/1OZ5cA/R5anHhGykxGznpuMbEPWCP4SJ/uXVbNmQQz+ZOTpH0/
+=UCG1
+-----END PGP SIGNATURE-----
