@@ -1,0 +1,30 @@
+# Copyright 1999-2013 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/regex-base/regex-base-0.93.2-r1.ebuild,v 1.1 2013/04/02 10:26:03 gienah Exp $
+
+EAPI=5
+
+# ebuild generated by hackport 0.3.2.9999
+
+CABAL_FEATURES="lib profile haddock hoogle hscolour"
+inherit haskell-cabal
+
+DESCRIPTION="Replaces/Enhances Text.Regex"
+HOMEPAGE="http://sourceforge.net/projects/lazy-regex"
+SRC_URI="mirror://hackage/packages/archive/${PN}/${PV}/${P}.tar.gz"
+
+LICENSE="BSD"
+SLOT="0/${PV}"
+KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris"
+IUSE=""
+
+RDEPEND="dev-haskell/mtl:=[profile?]
+		>=dev-lang/ghc-6.10.4:="
+DEPEND="${RDEPEND}
+		>=dev-haskell/cabal-1.2"
+
+src_configure() {
+	haskell-cabal_src_configure \
+		--flag=splitbase \
+		--flag=newbase
+}
